gen code in workflow service
