# app/workflow/internal/server/grpc.go
@@ -1,7 +1,7 @@
 package server
 
 import (
-	v1 "gflow-kratos/api/workflow/v1"
+	pb "gflow-kratos/api/workflow/v1"
 	"gflow-kratos/app/workflow/internal/conf"
 	"gflow-kratos/app/workflow/internal/service"
 
@@ -11,7 +11,7 @@ import (
 )
 
 // NewGRPCServer new a gRPC server.
-func NewGRPCServer(c *conf.Server, greeter *service.GreeterService, logger log.Logger) *grpc.Server {
+func NewGRPCServer(c *conf.Server, svc *service.WorkflowService, logger log.Logger) *grpc.Server {
 	var opts = []grpc.ServerOption{
 		grpc.Middleware(
 			recovery.Recovery(),
@@ -27,6 +27,6 @@ func NewGRPCServer(c *conf.Server, greeter *service.GreeterService, logger log.L
 		opts = append(opts, grpc.Timeout(c.Grpc.Timeout.AsDuration()))
 	}
 	srv := grpc.NewServer(opts...)
-	v1.RegisterWorkflowServer(srv, greeter)
+	pb.RegisterWorkflowServer(srv, svc)
 	return srv
 }
